export class Posology {
    quantity: string;
    technique: string;
    interval: string;
    period: string;
}